Fixed outline in search box, Open social links in new window, Link Who We Are to Clinical Services, Fix organization chart not appearing
close #2
close #3
close #4
close #5

--- a/sites/all/themes/whiwh_custom/sass/screen.scss
+++ b/sites/all/themes/whiwh_custom/sass/screen.scss
@@ -619,6 +619,7 @@ margin:0;
     line-height: 29px;
     padding: 0 10px;
     width: 105px;
+    outline:0;
 	}
 .block-search .form-actions{
 float:left;
