--- a/sites/all/themes/whiwh_custom/sass/screen.scss
+++ b/sites/all/themes/whiwh_custom/sass/screen.scss
@@ -270,7 +270,7 @@ a.donate em						{ font-style:normal; font-size:18px; display:block;}
 
 
 .view-id-upcoming_events .view-footer a						{ background:url(../images/box1_anchors.png) top no-repeat; width:171px; height:40px; margin:0 auto; display:block; text-align:center; text-decoration:none;  color:#FFF; font-weight:bold; line-height:40px; text-shadow: -2px 2px 2px rgba(210, 165, 167, 1);text-transform:uppercase;}
-
+.view-id-upcoming_events .view-footer a:hover {opacity:0.8;}
 
 .view-id-upcoming_events .views-row{
 padding-bottom:15px;
@@ -302,7 +302,7 @@ color:#6a0e49; line-height:16px;
 #block-block-4	h4					{  font-size:14px; color:#6a0e49; font-weight:bold; padding-bottom:10px;}
 #block-block-4	p					{  font-size:14px; color:#6a0e49; line-height:16px; padding:0 0 18px 0; }
 #block-block-4 .content	a					{ background:url(../images/box1_anchors.png) top no-repeat; width:171px; height:40px; margin:0 auto; display:block; text-align:center; text-decoration:none;  font-size:14PX; color:#FFF; font-weight:bold; line-height:40px;  text-shadow: -2px 2px 2px rgba(210, 165, 167, 1);}
-
+#block-block-4 .content	a:hover {opacity:0.8;}
 
 
 .social_media					{ width:300px; margin:0;}
@@ -350,6 +350,8 @@ color:#6a0e49; line-height:16px;
 .footer_bot						{ padding:20px 0 36px 0; margin:0;}
 .flogo							{ width:141px; height:43px;}
 .footer .copyright					{  font-size:10px; color:#fff; text-align:right; float:right; display:block; padding-right:20px; padding-top:10px; line-height:12px;}
+.footer .copyright a 			{color:white; text-decoration:none;}
+.footer .copyright a:hover 			{text-decoration:underline;}
 
 .fsocial						{ margin:0;}
 .fsocial 						{ display:inline-block; margin:0;}
@@ -445,7 +447,7 @@ top:72px;
 top:108px;
 }
 .footer .menu-block-1 > .menu > li.menu-mlid-344{
-top:142px;
+top:108px;
 }
 .link_ochc{
 background: url('../images/footer_logo.png') no-repeat scroll 0 0 transparent;
@@ -804,6 +806,12 @@ list-style-image:none !important;
 .view-news .views-row
 {
 	margin-bottom:1.5em;
+}
+
+.node-gallery-image .field-name-field-gallery-image .field-item
+{
+	float:left;
+	margin-right:4px;
 }
 
 
